--- a/.github/workflows/xss-summary.yaml
+++ b/.github/workflows/xss-summary.yaml
@@ -12,9 +12,16 @@ on:
         required: false
 
 jobs:
+  # Dummy job to satisfy GitHub Actions requirement for a starting point
+  start:
+    runs-on: ubuntu-latest
+    steps:
+      - name: This job is just a placeholder
+        run: echo "Starting the summary workflow..."
+
   # Job 7: Final summary
   final-summary:
-    needs: [httpx-scan, x8-scan, kxss-scan] # Ensure these job names match the ones in xss-tools.yaml
+    needs: [start, httpx-scan, x8-scan, kxss-scan]
     runs-on: ubuntu-latest
     steps:
       - name: Download all results
@@ -29,7 +36,6 @@ jobs:
           DOMAIN="${{ inputs.domain }}"
 
           # Combine all results (assuming artifact names are consistent with previous stages)
-          # You might need to adjust artifact names if they differ from url-gathering.yaml or xss-tools.yaml
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; > httpx.txt || true
           find . -name "httpx-results-*" -type d -exec grep '?' {}/*.txt \; > dynamic-httpx.txt || true
           find . -name "x8-results-*" -type d -exec cat {}/*.txt \; > x8-brute.txt || true
@@ -61,18 +67,15 @@ jobs:
           }
 
           # Generate summary counts
-          # IMPORTANT: Verify that the artifact paths/names used here match exactly
-          # what was generated and uploaded in the previous stages (e.g., url-gathering.yaml and xss-tools.yaml).
-          # Common artifact names could be from 'combined-results', 'httpx-results-*', etc.
-          WAYBACK_COUNT=$(count_or_zero passive-wayback/waybackurls.txt) # Assuming waybackurls.txt is in an artifact named passive-wayback
-          GAU_COUNT=$(count_or_zero passive-gau/gau.txt) # Assuming gau.txt is in an artifact named passive-gau
-          ALLURLS_COUNT=$(count_or_zero combined-results/all-urls.txt) # Assuming combined-results artifact contains all-urls.txt
-          STATIC_COUNT=$(grep -iv "?" combined-results/all-urls.txt 2>/dev/null | sort -u | wc -l || echo 0) # Counting static URLs from all-urls.txt
-          DYNAMIC_COUNT=$(count_or_zero dynamic-httpx.txt) # Result from httpx-scan job
-          HTTPX_COUNT=$(count_or_zero httpx.txt) # Combined httpx results
-          UNFURLPARAMS_COUNT=$(count_or_zero combined-results/unfurl-params.txt) # Assuming unfurl-params.txt is in combined-results artifact
-          X8_COUNT=$(count_or_zero x8-brute.txt) # Combined x8 results
-          KXSS_COUNT=$(count_or_zero kxss-out.txt) # Combined kxss results
+          WAYBACK_COUNT=$(count_or_zero passive-wayback/waybackurls.txt)
+          GAU_COUNT=$(count_or_zero passive-gau/gau.txt)
+          ALLURLS_COUNT=$(count_or_zero combined-results/all-urls.txt)
+          STATIC_COUNT=$(grep -iv "?" combined-results/all-urls.txt 2>/dev/null | sort -u | wc -l || echo 0)
+          DYNAMIC_COUNT=$(count_or_zero dynamic-httpx.txt)
+          HTTPX_COUNT=$(count_or_zero httpx.txt)
+          UNFURLPARAMS_COUNT=$(count_or_zero combined-results/unfurl-params.txt)
+          X8_COUNT=$(count_or_zero x8-brute.txt)
+          KXSS_COUNT=$(count_or_zero kxss-out.txt)
 
           # Print summary to console using echo
           echo "============ Recon Summary for $DOMAIN ============"
@@ -85,7 +88,7 @@ jobs:
           echo "httpx (alive URLs): $HTTPX_COUNT"
           echo "x8 reflections lines: $X8_COUNT"
           echo "kxss scan lines: $KXSS_COUNT"
-          if [[ -n "${{ inputs.domain }}" ]]; then # Check if domain is provided
+          if [[ -n "${{ inputs.domain }}" ]]; then
             echo "Target Domain: ${{ inputs.domain }}"
           fi
           if [[ -n "${{ inputs.headers }}" ]]; then
@@ -105,7 +108,7 @@ jobs:
           echo "httpx (alive URLs): $HTTPX_COUNT" >> final-results/FINAL_SUMMARY.txt
           echo "x8 reflections lines: $X8_COUNT" >> final-results/FINAL_SUMMARY.txt
           echo "kxss scan lines: $KXSS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          if [[ -n "${{ inputs.domain }}" ]]; then # Check if domain is provided
+          if [[ -n "${{ inputs.domain }}" ]]; then
             echo "Target Domain: ${{ inputs.domain }}" >> final-results/FINAL_SUMMARY.txt
           fi
           if [[ -n "${{ inputs.headers }}" ]]; then
